fix: structures on mobiles phase 1

--- a/src/components/Description/style.module.scss
+++ b/src/components/Description/style.module.scss
@@ -1,60 +1,132 @@
-.description{
-    padding-left: 200px;
-    padding-right: 200px;
-    margin-top: 200px;
-    display: flex;
-    justify-content: center;
-    .body{
-        max-width: 1400px;
-        display: flex;
-        gap: 50px;
-        position: relative;
-        p{
-            margin: 0px;
-            &:nth-of-type(1){
-                font-size: 36px;
-                gap: 8px;
-                line-height: 1.3;
-                span{
-                    margin-right: 3px;
-                }
-                .mask{
-                    position: relative;
-                    overflow: hidden;
-                    display: inline-flex;
-                }
-            }
-            &:nth-of-type(2){
-                font-size: 18px;
-                width: 80%;
-                font-weight: 300;
-            }
-        }
-        .button{
-            top: 80%;
-            left: calc(100% - 200px); 
-            width: 180px;
-            height: 180px;
-            background-color: #1C1D20;
-            color: white;
-            border-radius: 50%;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            p{
-                margin: 0px;
-                font-size: 16px;
-                font-weight: 300;
-                position: relative;
-                z-index: 1;
-            }
-        }
-    }
-    .moreWork{
-        padding: 20px;
-        border-radius: 40px;
-        border: 1px solid grey;
-    }
+.description {
+	padding-left: 200px;
+	padding-right: 200px;
+	margin-top: 200px;
+	display: flex;
+	justify-content: center;
+	.body {
+		max-width: 1400px;
+		display: flex;
+		gap: 50px;
+		position: relative;
+		p {
+			margin: 0px;
+			&:nth-of-type(1) {
+				font-size: 36px;
+				gap: 8px;
+				line-height: 1.3;
+				span {
+					margin-right: 3px;
+				}
+				.mask {
+					position: relative;
+					overflow: hidden;
+					display: inline-flex;
+				}
+			}
+			&:nth-of-type(2) {
+				font-size: 18px;
+				width: 80%;
+				font-weight: 300;
+			}
+		}
+		.button {
+			top: 80%;
+			left: calc(100% - 200px);
+			width: 180px;
+			height: 180px;
+			background-color: #1c1d20;
+			color: white;
+			border-radius: 50%;
+			position: absolute;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			cursor: pointer;
+			p {
+				margin: 0px;
+				font-size: 16px;
+				font-weight: 300;
+				position: relative;
+				z-index: 1;
+			}
+		}
+	}
+	.moreWork {
+		padding: 20px;
+		border-radius: 40px;
+		border: 1px solid grey;
+	}
+}
+
+@media (max-width: 1024px) {
+	/* Pour les écrans de tablette */
+	.description {
+		padding-left: 50px;
+		padding-right: 50px;
+		margin-top: 150px;
+
+		.body {
+			max-width: 100%;
+			flex-direction: column;
+			gap: 40px;
+
+			p:nth-of-type(1) {
+				font-size: 28px;
+			}
+
+			p:nth-of-type(2) {
+				font-size: 16px;
+				width: 90%; /* Ajustement pour tablette */
+			}
+
+			.button {
+				top: 85%;
+				left: calc(100% - 150px);
+				width: 160px;
+				height: 160px;
+			}
+		}
+
+		.moreWork {
+			padding: 15px;
+			border-radius: 30px;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.description {
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-top: 50px;
+
+		.body {
+			flex-direction: column;
+			gap: 15px;
+
+			p:nth-of-type(1) {
+				font-size: 24px;
+			}
+
+			p:nth-of-type(2) {
+				font-size: 16px;
+				width: 100%;
+				position: relative;
+				margin-top: 50px;
+			}
+
+			.button {
+				top: 90%;
+				left: 50%;
+				transform: translateX(-50%);
+				width: 120px;
+				height: 120px;
+			}
+		}
+
+		.moreWork {
+			padding: 10px;
+		}
+	}
 }
